Use internal API to start downloads from download page

Otherwise, the renderer will turn cross-origin downloads into
navigations

BUG=857441
R=asanka@chromium.org

Change-Id: I7a584951d794d22a6c417d06bd80d6de0db53236
Reviewed-on: https://chromium-review.googlesource.com/1120818
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Reviewed-by: Asanka Herath <asanka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572205}
Former-commit-id: 65d22828ffdeff2b3abf2452bd2fa863a168259e