extensions/browser/api/web_request/web_request_permissions.cc
@@ -102,7 +102,9 @@ bool IsWebUIAllowedToMakeNetworkRequests(const url::Origin& origin) {
       // https://crbug.com/831812
       origin.host() == "sync-confirmation" ||
       // https://crbug.com/831813
-      origin.host() == "inspect";
+      origin.host() == "inspect" ||
+      // https://crbug.com/859345
+      origin.host() == "downloads";
 }
 
 PermissionsData::PageAccess CanExtensionAccessURLInternal(
